# KotazTempaizer

./: README.md  gen.py  index.html  pyproject.toml
data/: main.yml
mypages/: t.html
plugins/: navbar.html  pages.html  title.html
posts/: testpost.html  testpost2.html  testpost25.html  testpost26.html
src/: index.html
src/mypages/: t.html
templates/: head.html  scripts.html
