[tool.poetry]
name = "kotaztempaizer"
version = "0.1.0"
description = "Kotaz Tempaizer - шаблонизатор написанный лично для моих нужд"
authors = ["Kotaz <semechkagent@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
